fixing overflow on nav

--- a/src/input.css
+++ b/src/input.css
@@ -23,10 +23,10 @@ html {
 
 #particles-js {
   position: absolute;
-  width: max-content;
+  width: 100%;
   height: 100%;
   background-size: cover;
-  background-position: 100%;
+  background-position: right;
 }
 
 body {
